tests/invalid/import_in_parent.err_exp
import_in_parent.m:009: In module `import_in_parent':
import_in_parent.m:009:   warning: module `bool' has a `:- import_module'
import_in_parent.m:009:   declaration, but is not used anywhere in the module.
import_in_parent.m:027: In clause for predicate `foo'/1:
import_in_parent.m:027:   error: undefined predicate `bool.foo'/1.
